Fix podcast details episodes bottom cutoff

--- a/public/app/style.scss
+++ b/public/app/style.scss
@@ -748,6 +748,7 @@ cbus-episode {
 
     overflow-x: hidden;
     overflow-y: auto;
+    padding-bottom: 58px;
 
     background-color: $white;
     transform: translateX(100%);
